--- a/local/.tmux.conf
+++ b/local/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "xterm-256color"
 set-option -g default-terminal "tmux-256color"
 set -s escape-time 0
+setw -g aggressive-resize on
 
 unbind C-b
 set-option -g prefix M-a
